examples/datalog/32_math/06_clamp_function.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_clamp
Knowledge graph 'test_clamp' created.
Switched to knowledge graph: test_clamp
> .kg use test_clamp
Switched to knowledge graph: test_clamp
> +vals[(-5,), (0,), (5,), (15,), (25,)].
Inserted 5 fact(s) into 'vals'.
> clamped(X, Y) :- vals(X), Y = max_int64(0, min_int64(X, 10)).
Script error: Parse error: Invalid term: 'max_int64(0, min_int64(X, 10))'
